Testing to change the region

--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
     "PASS": {
       "description": "The basic auth password.",
-      "generator": "secret",
+      "generator": "knorrhane",
       "required": true
     },
     "AWS_ACCESS_KEY_ID": {
@@ -32,7 +32,7 @@
     },
     "AWS_REGION": {
       "description": "The AWS region.",
-      "value": "us-east-1",
+      "value": "eu-north-1",
       "required": true
     },
     "GO_SETUP_GOPATH_IN_IMAGE": "true"
